anthos/namespaces/user-mgmt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-mgmt
  #labels:
     #istio.io/rev: asm-1122-0
