anthos/namespaces/user-mgmt/user-mgmt-api-deployment.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mgmt-api
  namespace: user-mgmt
  labels:
    app: user-mgmt-api
spec:
  replicas: 0
  selector:
    matchLabels:
      app: user-mgmt-api
  template:
    metadata:
      labels:
        app: user-mgmt-api
    spec:
      containers:
        - name: user-mgmt-api
          image: us-docker.pkg.dev/srcc-nero-prod/docker-repo/user-mgmt-api:latest
          ports:
          - containerPort: 5000
          volumeMounts:
          - mountPath: "/etc/sa"
            name: carina-user-management-sa
            readOnly: true
      imagePullSecrets:
      - name: artifact-registry
      nodeSelector:
        type: slurm-compute
      volumes:
      - name: carina-user-management-sa
        secret:
          secretName: carina-user-management-sa
          optional: false

---
apiVersion: v1
kind: Service
metadata:
  name: user-mgmt-api
  namespace: user-mgmt
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: user-mgmt-api
  type: LoadBalancer
