anthos/namespaces/user-mgmt/user-mgmt-virtualservice-api.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-mgmt-virtual-service-api 
  namespace: user-mgmt
spec:
  gateways:
  - user-mgmt-gateway
  hosts:
  - user-mgmt-api
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: user-mgmt-api.user-mgmt.svc.cluster.local
        port:
          number: 5000
    corsPolicy:
        allowOrigins:
          - exact: "http://10.112.1.231"
        allowOrigin:
          - "http://10.112.1.231"
